asset/css/extensions.css
/* -------------------
	Admin modules
   ------------------- */
#panelwidget-adminmodules li.extensions a {
	background:url(../img/icons.png) no-repeat 1px 1px;
}



/* -------------------
	Tabs
   ------------------- */
#extension-tabs li span.icon {
	background:url(../img/icons.png) no-repeat;
}
#extension-tabs li.installed span.icon {
	background-position:0 5px;
}
#extension-tabs li.info span.icon {
	background-position:0 -85px;
}
#extension-tabs li.config span.icon {
	background-position:0 -115px;
}
#extension-tabs li.records span.icon {
	background-position:0 -325px;
}
#extension-tabs li.imported span.icon {
	background-position:0 -716px;
}
#extension-tabs li.update span.icon {
	background-position:0 -686px;
}
#extension-tabs li.search span.icon {
	background-position:0 -26px;
}

/* Extension tabs right */
#extension-tabs li.info,
#extension-tabs li.config {
	float:right;
}

/* Special tabs right */
#extension-tabs li.imported,
#extension-tabs li.update,
#extension-tabs li.search {
	float:right;
}



/* -------------------
	Extension list
   ------------------- */
.extlist {
	margin-top:6px;
}

.extlist th,
.extlist td {
	vertical-align:middle;
	line-height:11px;
}

	/* list columns */
.extlist th.icon {
	width:20px;
}
.extlist th.extkey {
	width:100px;
}
.extlist th.title {
	width:225px;
}
.extlist th.edit {
	width:120px;
}
.extlist th.version {
	width:40px;
}
.extlist th.download {
	width:20px;
}
.extlist th.doc {
	width:20px;
}
.extlist th.status {
	width:50px;
}

	/* list icons */
.extlist td.edit a {
	width:18px;
	height:18px;
	display:inline-block;
	background:url(../img/icons.png) no-repeat;
}
.extlist td.edit a.disabled {
	opacity:0.3;
	filter:alpha(opacity = 30);
	cursor:default !important;
}

.extlist td.edit a.uninstall {
	background-position:0 -58px;
}
.extlist td.edit a.install {
	background-position:0 -30px;
}
.extlist td.edit a.remove {
	background-position:0 -660px;
}

.extlist td.edit a.info {
	background-position:0 -88px;
}
.extlist td.edit a.config {
	background-position:0 -119px;
}
.extlist td.edit a.records {
	background-position:0 -329px;
}
.extlist td.edit a.rights {
	background-position:0 -150px;
}



.extlist td.doc a {
	background:url(../img/icons.png) no-repeat 0 -510px;
}

.extlist td.download a.download {
	background:url(../img/icons.png) no-repeat 0 -480px;
}

/* -------------------
	Import and install
   ------------------- */
p.importInfo {
	margin:10px 10px 10px 0;
}
#installed-action {
	margin-top:10px;
}
#installed-action button.extensionInfo .icon {
	background:url(../img/icons.png) no-repeat 0 -87px;
}
#installed-action button.extensionConfig .icon {
	background:url(../img/icons.png) no-repeat 0 -119px;
}


form.formImportExtension button.uploadExtension span.icon {
	background:url(../img/icons.png) no-repeat 0 -28px;
}

.uninstalled button .icon {
	background-image:url(../img/icons.png);
	background-repeat:no-repeat;
}

.uninstalled button.download .icon {
	background-position:0 -478px;
}

.uninstalled button.delete .icon {
	background-position:0 -658px;
}

.uninstalled button.install .icon {
	background-position:0 -28px;
}

.installAlternatives {
	margin-top:10px;
}

.installAlternatives button .icon {
	background-image:url(../img/icons.png);
}

.installAlternatives button.ter .icon {
	background-position:0 -28px;
}

.installAlternatives button.upload .icon {
	background-position:0 -28px;
}


/* -------------------
	Upload extension
   ------------------- */
#importExtension-form .fLabel {
	width:250px;
}

#importExtension-form fieldset {
	padding-top:20px;
}

#importExtension-form legend {
	display:none;
}

